# hatch-conda-build

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  tests.yaml
hatch_conda_build/: config.py  hooks.py  plugin.py
tests/: conftest.py  test_hatch.py
tests/package-a/: pyproject.toml
tests/package-a/package_a/: __init__.py
