[project]
name = "hatch-conda-build"
description = 'conda-build using pyproject.toml'
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
   "grayskull",
   "hatchling",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "hatch_conda_build/__version__.py"

[project.entry-points.hatch]
conda = "hatch_conda_build.hooks"